<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LockScreen</string>
    <!-- <string name="hint">password</string> -->
    <string name="action_settings">Settings</string>
    <string name="name">name</string>
    <string name="num_1">\u0020 1 \u0020</string>
    <string name="num_2">\u0020 2 \u0020</string>
    <string name="num_3">\u0020 3 \u0020</string>
    <string name="num_4">\u0020 4 \u0020</string>
    <string name="num_5">\u0020 5 \u0020</string>
    <string name="num_6">\u0020 6 \u0020</string>
    <string name="num_7">\u0020 7 \u0020</string>
    <string name="num_8">\u0020 8 \u0020</string>
    <string name="num_9">\u0020 9 \u0020</string>
    <string name="num_0">\u0020 0 \u0020</string>
    <string name="clear">清除</string>
    <string name="ok">确认</string>
    <string name="title_activity_main">LockScreen</string>
    <string name="main_hint">锁屏已启用！</string>
    <string name="reset">重设密码</string>
    <string name="title_activity_lock">Lock</string>
    <string name="close_lock">停止锁屏</string>
    <string name="stop_lock">已停止锁屏！</string>

</resources>
