<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#80000000">

    <!--<EditText-->
        <!--android:id="@+id/name"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0sp"-->
        <!--android:layout_weight="1"-->
        <!--android:hint="@string/name"/>-->
    <Button
        android:id="@+id/num_5"
        android:text="@string/num_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/text"
        android:text="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="50dp"
        />
    <Button
        android:id="@+id/num_1"
        android:text="@string/num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/num_5"
        android:layout_toLeftOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_2"
        android:text="@string/num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_3"
        android:text="@string/num_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/num_5"
        android:layout_toRightOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_4"
        android:text="@string/num_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/num_6"
        android:text="@string/num_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_7"
        android:text="@string/num_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_5"
        android:layout_toLeftOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_8"
        android:text="@string/num_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_5"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_9"
        android:text="@string/num_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_5"
        android:layout_toRightOf="@id/num_5"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/clear"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/num_8"
        android:layout_below="@id/num_8"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/num_0"
        android:text="@string/num_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_8"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/ok"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_8"
        android:layout_toRightOf="@id/num_8"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#00000000"
        android:layout_margin="20dp"
        />
</RelativeLayout>
